refactor: 스케줄 조회 stream 로직 단순화
return 문에 복잡한 stream 로직을 단순화했습니다.
그 과정에서 중복 계산하던 내용을 제거했습니다.